@@ -12,6 +12,7 @@ Changes
 08/08/22 r204 Channel logging is now enabled even in debug mode
 
 Fixes
+08/09/06 r228 Now compiles on 64 bit Windows
 08/09/03 r227 Fixed GeoIP related crash with newer dat files [closes #512]
 08/09/03 r226 Fixed possible screwup of ctcp/tld overall count in db files
 08/09/02 r224 Fixed crash on invalid nick country name [closes #512]
